--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,7 @@ ml/rf_model filter=lfs diff=lfs merge=lfs -text
 ml/rf_model_rate filter=lfs diff=lfs merge=lfs -text
 S-Gan/models/pytorch_model.bin filter=lfs diff=lfs merge=lfs -text
 *.py linguist-language=Python
+*.html linguist-vendored
+*.json linguist-vendored
+*.yaml linguist-vendored
+*.md linguist-vendored
